2018-08-23  Gavin Salam  <gavin.salam@cern.ch>

	* scripts/update-contribs.sh:
	documented the --force option in the help message

2018-07-20  Gavin Salam  <gavin.salam@cern.ch>

	* VERSION: 
	* NEWS:
	* contribs.svn:
	prepared release of 1.037 with ConstituentSubtractor updated to 1.3.1

2018-06-06  Gavin Salam  <gavin.salam@cern.ch>

	* VERSION: 
	* NEWS:
	prepared release of 1.036.

	* contribs.svn:
	updated Nsubjettiness to 2.2.5, with fix for bug involving
	undefined pointer for in AxesDefinition

2018-05-29  Gavin Salam  <gavin.salam@cern.ch>

	* VERSION:
	* NEWS:
	prepared for the release of 1.035

	* contribs.svn:
	updated RecursiveTools to 2.0.0-beta2 with bug fix for recent
	clang compilers.

2018-05-28  Gavin Salam  <gavin.salam@cern.ch>

	* contribs.svn:
	updated ConstituentSubtractor to 1.2.7 (extra features, clearer examples)

2018-05-18  Gregory Soyez  <soyez@fastjet.fr>

	* VERSION:
	* NEWS:
	prepared for the release of 1.034

	* contribs.svn:
	upped ConstituentSubtractor to 1.2.5 (fixing a bug)

	* scripts/internal/Template/Makefile
	added CXXFLAGS to the compilation of the examples

2018-02-15  Gregory Soyez  <soyez@fastjet.fr>

	* VERSION:
	* NEWS:
	prepared for the release of 1.033

	* contribs.svn:
	upped EnergyCorrelator to 1.3.1 (fixing a memory leak)

2018-01-17  Gavin Salam  <gavin.salam@cern.ch>

	* NEWS: 
	* VERSION:
	prepared for release of 1.032

	* contribs.svn:
	updated EnergyCorrelator to 1.3.0

2017-12-20  Gavin Salam  <gavin.salam@cern.ch>

	* VERSION:
	* NEWS:
	upped version to 1.031 & prepared NEWS for release

	* contribs.svn:
	upped ConstituentSubtractor to 1.2.4

2017-11-13  Gavin Salam  <gavin.salam@cern.ch>

	* configure:
	included patch from attila.krasznahorkay@cern.ch for issue with
	macOS sed.

2017-10-13  Gregory Soyez  <soyez@fastjet.fr>

	* VERSION:
	* NEWS:
	preapred to release v1.030

	* contribs.svn:
	switched to v2.0.0-beta1 of RecursiveTools

2017-09-10  Gavin Salam  <gavin.salam@cern.ch>


	* VERSION:
	* NEWS: