@@ -1,3 +1,8 @@
+2018-08-23  Gavin Salam  <gavin.salam@cern.ch> + Matteo
+
+	* scripts/internal/get-author-emails.py:
+	added script to extract all author emails
+
 2018-08-23  Gavin Salam  <gavin.salam@cern.ch>
 
 	* scripts/update-contribs.sh:
